package com.framework.beans.factory;

public interface HierarchicalBeanFactory extends BeanFactory{

}
