package com.framework.beans.factory.config;

import com.framework.beans.PropertyValues;

public class BeanDefinition {
	private Class beanClass;
	private PropertyValues propertyValues;
	public BeanDefinition(Class beanClass){
		this.beanClass = beanClass;
		this.propertyValues = new PropertyValues();
	}
	public BeanDefinition(Class beanClass,PropertyValues propertyValues){
		this.beanClass = beanClass;
		this.propertyValues = propertyValues != null ? propertyValues : new PropertyValues();
	}

	public PropertyValues getPropertyValues() {
		return propertyValues;
	}

	public Class getBeanClass() {
		return beanClass;
	}

	public void setPropertyValues(PropertyValues propertyValues) {
		this.propertyValues = propertyValues;
	}

	public void setBeanClass(Class beanClass) {
		this.beanClass = beanClass;
	}

}
